--- a/src/index.css
+++ b/src/index.css
@@ -27,16 +27,7 @@
   @apply bg-teal-400 rounded-lg hover:bg-teal-500 transition-all duration-200;
 }
 
-.beta__tag {
-  position: absolute;
-  left: -6rem;
-  top: 2rem;
-  background-color: #f12711;
-  width: 300px;
-  transform: rotate(-45deg);
-  padding: 0.5rem;
-  text-align: center;
-}
+
 
 body {
   margin: 0;
@@ -44,7 +35,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 18px;
-  @apply bg-teal-50 overflow-x-hidden;
+  @apply bg-green-50 overflow-x-hidden;
 }
 
 .max-width {
@@ -122,6 +113,7 @@ button {
   border-radius: 5px;
   width: calc(100vw - 45px);
   transition: top 0.4s ease-in-out;
+  margin-bottom: -50px;
   @apply shadow shadow-teal-500;
 }
 
@@ -137,47 +129,10 @@ button {
   background-image: linear-gradient(90deg, #f12711 0%, #f5af19 100%);
 }
 
-.video {
-  width: calc(100vw - 40px);
-  margin: auto;
-  height: 200px;
-}
-
-.testimonials .article:first-child {
-  border-color: var(--red-card);
-}
-
-.testimonials .article:first-child .content {
-  background-color: var(--red-card);
-  padding: 1rem;
-}
-
-.testimonials .article:nth-child(2) {
-  border-color: var(--yellow-card);
-}
-
-.testimonials .article:nth-child(2) .content {
-  background-color: var(--yellow-card);
-  padding: 1rem;
-}
-
-.testimonials .article:nth-child(3) {
-  border-color: var(--blue-card);
-}
-
-.testimonials .article:nth-child(3) .content {
-  background-color: var(--blue-card);
-  padding: 1rem;
-}
-
 .call__to__action {
   background-image: linear-gradient(90deg, #f5af19 0%, #f12711 100%);
 }
 
-.about {
-  background-image: linear-gradient(90deg, #f12711 0%, #f5af19 100%);
-  padding: 2rem 0;
-}
 
 .contact__form input,
 .contact__form textarea,
